--- a/css/theme/solarized.css
+++ b/css/theme/solarized.css
@@ -50,7 +50,8 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #586e75;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "Lato", sans-serif;
+  /*font-family: "League Gothic", Impact, sans-serif;*/
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
